--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,10 @@
 /* font-family: 'Roboto', sans-serif; */
+html {
+  box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
